2011-06-23 : Tagging 2.7.1
2011-06-23 : removing sloppy print statements in python wrap
2011-06-21 : Tagging 2.7.0
2011-06-21 : Fixed bug using the wrong dims for checking validity of arrays in fortran interface - for vertices-
2011-06-13 : Tagging 2.6.1
2011-06-13 : Fixed bug triggering wrong warning on bounds being at the beg/end of month
2011-05-26 : File name for subhourly were wrongly constructed, upped version to 2.6
2011-05-24 : when we decide to add the extra time precision in the file name only for less than 6hr, i did this only for the first time, not the second one... Fixed.
2011-04-27 : Tagging 2.5.9
2011-04-27 : fixed file name for climatologies, last bounds was set improperly
2011-04-26 : was setting coordinates attribute multiple times, now first check if the bit we are trying to add is already in
2011-04-11 : releasing 2.5.8
2011-04-07 : only adding extra time precision in file names if it is < 6hr instead of 1 day
2011-04-05 : not overwriting user time values in climatology case
2011-02-25 : releasing 2.5.7
2011-02-25 : fixed bug for dims of length one where bounds needed to be flliped, it used to raise an unwarranted error
2011-02-23 : releasing 2.5.6
2011-02-23 : got cmor_set_variable_attribute to actually do something and not raise error all the time, thx to Larry Solheim to spot this.
2011-02-23 : fixed issue when writing 1 time step at a time for climatological means, issue could led to seg fault and bad final file names, thx to Koji Ogochi to spot this one.
2011-02-16 : releasing 2.5.5
2011-02-16 : added process id to temporary file names so that code can be run via mpi
2011-02-02 : releasing 2.5.4
2011-02-02 : fixed a memory issue in the Python API for get_variable_attribute and has_variable_attribute
2011-01-31 : releasing 2.5.3
2011-01-25 : path produced w/o '/' or weird characters
2011-01-25 : cannot set global attribute if it is an attribute that can be set via cmor_dataset