@@ -2,8 +2,8 @@
 #define CMOR_H
 
 #define CMOR_VERSION_MAJOR 2
-#define CMOR_VERSION_MINOR 7
-#define CMOR_VERSION_PATCH 1
+#define CMOR_VERSION_MINOR 8
+#define CMOR_VERSION_PATCH 0
 
 #define CMOR_CF_VERSION_MAJOR 1
 #define CMOR_CF_VERSION_MINOR 4
